# samuel

./: Cargo.toml  Makefile  README.md  Shuttle.toml  samuel.code-workspace
.github/workflows/: cd.yml  ci.yml  napi.yml
demo/c++/: Makefile  README.md  demo.cc
demo/java/: README.md  pom.xml
demo/java/src/main/java/demo/: Demo.java
demo/napi/: README.md  index.js  package.json
demo/python/: README.md  demo.py
demo/wasm/nodejs/: README.md  index.js  package.json
demo/wasm/npm/: README.md  REAME.md  index.js  package.json
demo/wasm/web/: README.md  index.html
docs/: dohy.md  dothyphen-c.md  dothyphen-fermyon.md  dothyphen-napi.md  dothyphen-python.md  dothyphen-shuttle.md  dothyphen-wasm.md  dothyphen.md
dohy/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md
dohy/src/: main.rs
dothyphen/: CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
dothyphen-c/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
dothyphen-c/src/: lib.rs
dothyphen-fermyon/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  spin.toml
dothyphen-fermyon/src/: lib.rs
dothyphen-java/: CONTRIBUTING.md  Cargo.toml  README.md
dothyphen-java/src/: lib.rs
dothyphen-java/src/java/: .gitignore  pom.xml
dothyphen-java/src/java/src/main/java/dotjyphen/: Translate.java
dothyphen-java/src/java/src/test/java/dotjyphen/: TranslateTest.java
dothyphen-napi/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  package.json
dothyphen-napi/npm/android-arm-eabi/: README.md  package.json
dothyphen-napi/npm/android-arm64/: README.md  package.json
dothyphen-napi/npm/darwin-arm64/: README.md  package.json
dothyphen-napi/npm/darwin-universal/: README.md  package.json
dothyphen-napi/npm/darwin-x64/: README.md  package.json
dothyphen-napi/npm/linux-arm-gnueabihf/: README.md  package.json
dothyphen-napi/npm/linux-arm64-gnu/: README.md  package.json
dothyphen-napi/npm/linux-arm64-musl/: README.md  package.json
dothyphen-napi/npm/linux-x64-gnu/: README.md  package.json
dothyphen-napi/npm/linux-x64-musl/: README.md  package.json
dothyphen-napi/npm/win32-arm64-msvc/: README.md  package.json
dothyphen-napi/npm/win32-ia32-msvc/: README.md  package.json
dothyphen-napi/npm/win32-x64-msvc/: README.md  package.json
dothyphen-napi/src/: lib.rs
dothyphen-python/: CONTRIBUTING.md  Cargo.toml  README.md
dothyphen-python/src/: lib.rs
dothyphen-shuttle/: CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
dothyphen-shuttle/src/: main.rs
dothyphen-wasi/: CONTRIBUTING.md  Cargo.toml  README.md
dothyphen-wasm/: CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
dothyphen-wasm/src/: lib.rs
dothyphen/src/: lib.rs
src/: cli.rs  lib.rs  main.rs  morse.rs
src/lib/: lib.rs  morse.rs
tests/c++/: Makefile  tests.cc
tests/napi/: package.json  translate.test.js
tests/python/tests/: test_dotpyphen.py
tests/wasm/nodejs/: package.json  translate.test.js
tests/wasm/wasi/: wasmtime.test.sh
