[package]
edition = "2021"
name = "samuel"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "samuel"
path = "src/lib/lib.rs"

[[bin]]
name = "samuel"
path = "src/bin/cli/bin.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
lazy_static = "1.3.0"
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
