[package]
name = "dohy"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A CLI for DotHyphen, a simple ASCII to Morse translator."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/samuel/dohy"
keywords = ["morse"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dothyphen = "0.2"