[package]
name = "dohy"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A CLI for DotHyphen, a simple ASCII to Morse translator and vice versa."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/samuel/dohy"
keywords = ["morse"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dothyphen = "1.0.0"