[package]
name = "dothyphen-fermyon"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A Fermyon WebAssembly wrapper around DotHyphen, a simple ASCII to Morse translator"
license = "MIT"
authors = ["isfegu"]
homepage = "https://github.com/isfegu/samuel/dothyphen-fermyon"


[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
serde_json = "1.0"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.1.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
dothyphen = "0.2"