[package]
edition = "2021"
name = "dothyphen-napi"
version = "0.1.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.13.2", default-features = false, features = ["napi4"] }
napi-derive = "2.13.0"
dothyphen = { path = "../dothyphen", version = "0.2.0" }

[build-dependencies]
napi-build = "2.0.1"