[package]
name = "dothyphen-python"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A Python wrapper of DotHyphen, a simple ASCII to Morse translator."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/samuel/dothyphen"

[lib]
name = "dotpyphen"
crate-type = ["cdylib"]

[dependencies]
dothyphen = "0.2"

[dependencies.pyo3]
version = "0.19"
features = ["abi3-py38"]
