[package]
name = "dothyphen-shuttle"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A Shuttle wrapper around DotHyphen, a simple ASCII to Morse translator"
license = "MIT"
authors = ["isfegu"]
homepage = "https://github.com/isfegu/samuel/dothyphen-shuttle"

[dependencies]
actix-web = "4.4"
dothyphen = "0.2"
serde = { version = "1.0", features = ["derive"] }
shuttle-actix-web = "0.27"
shuttle-runtime = "0.27"
tokio = "1.32"
