[package]
name = "dothyphen-wasm"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A WebAssembly wrapper of DotHyphen, a simple ASCII to Morse translator."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/samuel/dothyphen-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
dothyphen = "0.2"
