[package]
name = "dothyphen"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A simple ASCII to Morse translator."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/samuel/dothyphen"
keywords = ["morse"]
categories = ["encoding"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.3.0"
