[package]
name = "dothyphen"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/isfegu/samuel"
description = "A simple ASCII to Morse and vice versa translator."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/samuel/dothyphen"
keywords = ["morse"]
categories = ["encoding"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
